[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ky-voter-tracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
    "xlrd>=2.0",
    "streamlit>=1.28",
    "plotly>=5.18",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "responses>=0.25",
]

[project.scripts]
ky-voter-tracker = "ky_voter_tracker.main:main"

[tool.setuptools.packages.find]
include = ["ky_voter_tracker*"]
